--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Net::Nessus::REST
 
+0.2 Sat, 14 Feb 2015
+* added plugin query functionality (Todd Bruner)
+
 0.1 Mon, 22 Dec 2014
 * initial release
