--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Net::Nessus::REST
 
+0.3 Mon, 06 Jul 2015
+* added scanner ID query functionality (Fabrice Durand)
+* allow to return report content as a string instead of a file (Fabrice Durand)
+* fix scanners list method (Todd Bruner)
+
 0.2 Sat, 14 Feb 2015
 * added plugin query functionality (Todd Bruner)
 
