--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Net::Nessus::REST
 
+0.6.1 Wed, 09 Mar 2016
+- fix test dependencies
+- fix usage of dotted-decimal version scheme
+
 0.6 Tue, 08 Mar 2016
 - first actual tests against a live Nessus server
 - fix get_scan_details() method (Denis Joiret)
